# imac-tower-defense

./: .gitignore  CMakeLists.txt  LICENSE  README.md  changelog.md  imgui.ini  testme.cpp
data/level-1/: data.itd
doc/: rapport.md
doc/.stackedit-trash/: rapport.md
doc/rapport-img/: hover.gif.xmp
gui/: Grid.xaml  hello-world.xaml
lib/NoesisGUI-2.2.0/: version.txt
lib/NoesisGUI-2.2.0/Include/: Noesis_pch.h
lib/debugbreak/: debugbreak.h
lib/entt-cpp14/docs/: entity-compiled.html
lib/glad/src/: glad.c
lib/imgui/: imgui_impl_opengl3.cpp
lib/rang/: rang.hpp
lib/ultralight-0.9.1/: README.md
res/gui/: end-screen.xaml  game-over.xaml  level-exit.xaml  level-hud.xaml  level-intro.xaml  level-start.xaml  start-menu.xaml  title-screen.xaml
res/gui/test-xaml-studio/: level-hud.xaml
res/levels/: level-1.itd  level-2.itd  level-3.itd  level-4.itd  level-5.itd
res/maps/: level-1.itd  map-1.itd  map-2.itd  map-3.itd
res/shaders/basic/: basic.frag  circle-explosion.frag  circle-with-glow.frag  laser.frag
res/shaders/texture/: enemy-explosion.frag  explosion.frag  texture-array.frag  texture.frag  tower-explosion.frag
shaders/: basic-mvp.vert  basic.vert
shaders/basic/: basic.vert
shaders/texture/: texture.frag
src/: main.cpp
src/component-factories/: primitive-factory.cpp  primitive-factory.hpp  rigid-body-factory.cpp  rigid-body-factory.hpp  sprite-factory.cpp  sprite-factory.hpp
src/components/: age.hpp  animated.hpp  animation-alpha.hpp  animation-dark.hpp  animation-pixels-vanish.hpp  animation-scale.hpp  attached-to.hpp  collision.hpp  constrained-rotation.hpp  direction.hpp  entity-explosion-association.hpp  entity-on.hpp  follow.hpp  growing-circle.hpp  health-bar.hpp  health.hpp  hitbox.hpp  look-at-mouse.hpp  look-at.hpp  motion.hpp  move-towards-mouse.hpp  pathfinding.hpp  primitive.hpp  rigid-body.hpp  rotated-by-mouse.hpp  shake.hpp  shoot-at.hpp  shoot-laser.hpp  sprite-animation.hpp  sprite.hpp  targeting.hpp  tint-colour.hpp  trajectory.hpp  transform-tile.hpp  transform.hpp  trigger.hpp  velocity.hpp  wiggle.hpp
src/core/: constants.cpp  constants.hpp  debug.hpp  game.cpp  game.hpp  get-position.cpp  get-position.hpp  graph.cpp  graph.hpp  identifiers.hpp  level.cpp  level.hpp  map.cpp  map.hpp  maths.cpp  maths.hpp  progression.cpp  progression.hpp  random.cpp  random.hpp  tags.hpp  tile.cpp  tile.hpp
src/core/game-state/: i-game-state.hpp  level-state.cpp  level-state.hpp  title-menu-state.cpp  title-menu-state.hpp
src/core/game-states/: cinematic-state.cpp  cinematic-state.hpp  end-screen-state.cpp  end-screen-state.hpp  game-over-state.cpp  game-over-state.hpp  i-game-state.cpp  i-game-state.hpp  level-exit-state.cpp  level-exit-state.hpp  level-intro-state.cpp  level-intro-state.hpp  level-state.cpp  level-state.hpp  title-screen-state.cpp  title-screen-state.hpp
src/core/level/: graph.cpp  graph.hpp  level.cpp  level.hpp
src/core/map/: graph.cpp  graph.hpp  map.cpp  map.hpp
src/debug/: gl-error-handling.cpp  gl-error-handling.hpp
src/entity-factories/: enemy-factory.cpp  enemy-factory.hpp  explosion-factory.cpp  explosion-factory.hpp  factory.hpp  mirror-factory.cpp  mirror-factory.hpp  pipe-factory.cpp  pipe-factory.hpp  projectile-factory.cpp  projectile-factory.hpp  tile-factory.cpp  tile-factory.hpp  tower-factory.cpp  tower-factory.hpp  vfx-factory.cpp  vfx-factory.hpp
src/events/: begin-contact.hpp  change-game-state.hpp  click.hpp  end-contact.hpp  enemy-damaged.hpp  enemy-dead.hpp  enemy-reached-end.hpp  enter-trigger.hpp  entity-damaged.hpp  event-emitter.hpp  exit-trigger.hpp  laser-particle-dead.hpp  left-click-down.hpp  left-click.hpp  loose.hpp  mouse-move.hpp  move.hpp  progression-updated.hpp  projectile-hit.hpp  right-click-down.hpp  right-click-up.hpp  scale-view.hpp  selected.hpp  start-wave.hpp  tower-dead.hpp  translate-view.hpp  victory-delay-ends.hpp  wave-updated.hpp
src/events/gui/: construct-selection.hpp
src/events/handlers/: contact-listener.cpp  contact-listener.hpp  event-emitter.hpp  input-handler.cpp  input-handler.hpp
src/events/inputs/: left-click-up.hpp  mouse-scrolled.hpp
src/events/interactions/: change-cursor.hpp  construct-selection.hpp  delete-entity.hpp  select-rotation.hpp
src/factories/: enemy-factory.hpp  primitive-factory.cpp  primitive-factory.hpp  rigid-body-factory.cpp  rigid-body-factory.hpp  sprite-factory.cpp  sprite-factory.hpp  tower-factory.hpp
src/graphics/: debug-draw.cpp  debug-draw.hpp  frame-buffer.cpp  frame-buffer.hpp  index-buffer.cpp  index-buffer.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  texture-array.cpp  texture-array.hpp  texture.cpp  texture.hpp  vertex-array.cpp  vertex-array.hpp  vertex-buffer-layout.hpp  vertex-buffer.cpp  vertex-buffer.hpp
src/gui/: game-over.cpp  level-hud.cpp  level-hud.hpp  my-grid.hpp  start-menu.cpp  start-menu.hpp  title-screen.cpp  title-screen.hpp
src/gui/end-screen/: end-screen.cpp  end-screen.hpp
src/gui/game-over/: game-over.cpp  game-over.hpp
src/gui/level-exit/: level-exit-bindings.cpp  level-exit-bindings.hpp  level-exit.cpp  level-exit.hpp
src/logger/: gl-error-handler.cpp  gl-error-handler.hpp  gl-log-handler.cpp  gl-log-handler.hpp  noesis-log-handler.cpp  noesis-log-handler.hpp
src/map/: graph.cpp  graph.hpp  map.cpp  map.hpp
src/services/: audio-service.cpp  audio-service.hpp  debug-draw.cpp  debug-draw.hpp  locator.hpp
src/systems/: ai-system.cpp  ai-system.hpp  animation-system.cpp  animation-system.hpp  attack-system.cpp  attack-system.hpp  audio-system.cpp  audio-system.hpp  construction-system.cpp  construction-system.hpp  focus-system.cpp  focus-system.hpp  follow-system.cpp  follow-system.hpp  health-system.cpp  health-system.hpp  i-system.cpp  i-system.hpp  isystem.hpp  laser-system.cpp  laser-system.hpp  life-and-death-system.cpp  life-and-death-system.hpp  movement-system.cpp  movement-system.hpp  physic-system.cpp  physic-system.hpp  physics-system.hpp  render-system.cpp  render-system.hpp  system.hpp  wave-system.cpp  wave-system.hpp
(+127 files in other folders)
